Logging and configuration in the application